--- a/typewriter/Info.plist
+++ b/typewriter/Info.plist
@@ -26,6 +26,10 @@
 	<string>Copyright © 2018 Jean-Marc Goepfert. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
